--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "multiplayer-clicker",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.5.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -11,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.0.2",
+    "@types/express": "^4.17.17",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +27,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
